--- a/app/views/pages/restricted.html.erb
+++ b/app/views/pages/restricted.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#restricted</h1>
-<p>Find me in app/views/pages/restricted.html.erb</p>
+<h1>restricted test page </h1>
+<p>resrtricted/personalise later</p>
