--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Trades for days</h1>
+ <%= image_tag "hero-christmas.jpg", alt: "christmas tree in a window", class: "hero-image" %>
