--- a/app/views/tradeservices/_form.html.erb
+++ b/app/views/tradeservices/_form.html.erb
@@ -14,6 +14,9 @@
     <%= form.label :status %>
     <%= form.text_field :status %>
     <br>
+    <%= form.label :picture %>
+    <%= form.file_field :picture, accept: 'image/png, image/jpeg, image/jpg' %>
+    <br>
     <%= form.label :location %>
     <%= form.text_field :location %>
     <br>
