--- a/app/views/enquiries/index.html.erb
+++ b/app/views/enquiries/index.html.erb
@@ -1,1 +1,17 @@
 <p>test</p>
+
+<div class="row">
+    <%# This is how I create my cards to display items for sale %>
+    <% @enquiries.each do |enquiry| %>
+        <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+            <div class="card-body">
+                <h5 class="card-title"><%= enquiry.name %></h5>
+                <p class="card-text menu-description"><%= enquiry.task %></p>
+                <p class="card-text menu-budget"><%= enquiry.date %></p>
+                <p class="card-text menu-trade"><%= enquiry.address %></p>
+            </div>
+            </div>
+        </div>
+    <% end %>
+</div> 
