views/enquiries cards html added/ however data is still not showing

--- a/app/views/enquiries/index.html.erb
+++ b/app/views/enquiries/index.html.erb
@@ -5,13 +5,13 @@
     <% @enquiries.each do |enquiry| %>
         <div class="col-md-4">
             <div class="card" style="width: 20rem;">
-            <div class="card-body">
+            <%# <%= image_tag tradeservice.picture, class:"card-img-top" %>
+              <div class="card-body">
                 <h5 class="card-title"><%= enquiry.name %></h5>
-                <p class="card-text menu-description"><%= enquiry.task %></p>
-                <p class="card-text menu-budget"><%= enquiry.date %></p>
-                <p class="card-text menu-trade"><%= enquiry.address %></p>
-            </div>
-            </div>
-        </div>
-    <% end %>
-</div> 
+                <p class="card-text menu-task"><%= enquiry.task %></p>
+                <p class="card-text menu-date"><%= enquiry.date %></p>
+                <p class="card-text menu-address"><%= enquiry.address %></p>
+  </div>
+</div>
+   <% end %>
+</div>
