--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -1,3 +1,4 @@
+<%# form that is called apon in index and edit.html.erb  %>
 <%= form_with model: @enquiry do |form| %>
     <%= form.label :task %>
     <%= form.text_area :tasks %>
