--- a/app/views/enquiries/edit.html.erb
+++ b/app/views/enquiries/edit.html.erb
@@ -1,3 +1,3 @@
 <p>Edit Enquiry</p>
-
+<%# calling form, to redder on new.html. This is dont to keep code DRY %>
 <%= render "form", enquiry:@enquiry %>
