--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,14 @@
 <nav>
+<%# devise setup  %>
 <% if user_signed_in? %>
 <span class='nav-greeting'> <%= "Lets get to fixing , #{current_user.username}"%> </span>
 <%= link_to "Sign Out",destroy_user_session_path, method: "delete" %>
+<%# other navigation bar links on the page  %>
 <%= link_to "New Listing", new_tradeservice_path, method: "get" %>
 <%= link_to "Make Enquiry", new_enquiry_path, method: "get" %>
 <%= link_to "View Trade Listings", tradeservices_path,  method: "get" %>
 <%= link_to "View Enqiries", enquiries_path, method: "get" %>
-
+<%# timeoutable after 30 minutes of inactivity %>
 <% else %>
 <%= link_to "Sign In", new_user_session_path %>
 <%= link_to "Sign Up", new_user_registration_path %>
