--- a/app/views/tradeservices/_form.html.erb
+++ b/app/views/tradeservices/_form.html.erb
@@ -1,3 +1,4 @@
+<%# form that is called apon in index and edit.html.erb  %>
 <%= form_with model: @tradeservice do |form| %>
     <%= form.label :name %>
     <%= form.text_field :name %>
