--- a/app/views/tradeservices/new.html.erb
+++ b/app/views/tradeservices/new.html.erb
@@ -1,3 +1,3 @@
 <h1> New Trade Service </h1>
-
+<%# calling form, to redder on new.html. This is dont to keep code DRY %>
 <%= render "form", tradeservice:@tradeservice %>
