comments in controllers, validated and sanitised data in models/ active records

--- a/app/views/tradeservices/edit.html.erb
+++ b/app/views/tradeservices/edit.html.erb
@@ -1,5 +1,5 @@
 <p>Edit TradeService</p>
-
+<%# calling form, to redder on new.html. This is dont to keep code DRY %>
 <%= render "form", tradeservice:@tradeservice %>
 
 
