--- a/app/views/enquiries/index.html.erb
+++ b/app/views/enquiries/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-<%# Bootstrap cards to display %>
+<%# Bootstrap cards to display enquriries%>
 <% @enquiries.each do |enquiry| %>
 <div class="col-md-4">
 <div class="card" style="width: 20rem;">
